feat(#001): 백엔드 태그 도메인 리팩토링 및 프론트엔드 빌드 오류 수정
이 커밋은 백엔드의 태그 및 채팅방 관련 도메인 구조를 개선하고, 그에 따른 프론트엔드의 빌드 및 API 연동 오류를 해결합니다.

<상세 변경 내역>
- Backend:
  - 'Tag'와 'RoomTag' 관련 도메인 로직을 리팩토링하여 다대다 관계를 명확히 재정의했습니다.
  - 'RoomServiceImpl'에서 ModelMapper 의존성을 제거하고, DTO와 엔티티 간 변환 로직을 수동으로 구현하여 명확성을 높였습니다.
  - 기존 'RoomCreateRequest', 'RoomResponse' DTO를 'dto/room' 패키지로 이동하고 구조를 개선했습니다.
  - 'ChatRoomTagService'의 책임을 명확히 하고, 태그 할당 로직을 개선했습니다.
- Frontend:
  - 'vite.config.ts' 파일의 'server'와 'define' 객체 사이 쉼표 누락으로 인한 문법 오류를 수정했습니다.
  - 방 생성 후 응답 데이터 구조 변경('roomId' -> 'id')에 맞춰 'CreateRoom.tsx'의 리다이렉션 로직을 수정했습니다.
  - 백엔드 응답 필드('private')와 프론트엔드 타입('isPrivate') 불일치 문제를 해결하기 위해 'rooms.ts' API 서비스에 수동 매핑 로직을 추가했습니다.

<기술적 세부사항>
- 파일: 'backend/src/main/java/com/vibechat/domain/tags/RoomTag.java', 'backend/src/main/java/com/vibechat/service/room/RoomServiceImpl.java', 'frontend/vite.config.ts', 'frontend/src/services/api/rooms.ts', 'frontend/src/types/room.ts'
- 클래스: 'RoomServiceImpl', 'ChatRoomTagServiceImpl', 'RoomTag'
- API: 'POST /api/rooms' (응답 데이터 구조 변경)

<영향도>
- Frontend: Vite 개발 서버가 정상적으로 실행됩니다. '방 만들기' 기능이 백엔드 변경사항과 호환되도록 수정되었습니다.
- Backend: 태그 및 채팅방 도메인의 안정성과 확장성이 향상되었습니다. DTO 구조가 명확해졌습니다.
- Database: 'room_tags' 테이블 스키마가 변경되었고, 'chat_rooms'와 'tags'의 관계가 재정의되었습니다.